docs: document guitar improvisation studio and backing orchestra workflow